# SSE_Kamara_scheme

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  cipher.cpp  cipher.h  client.cpp  encryption.cpp  encryption.h  token_gen.cpp  token_gen.h  unique_words.cpp  unique_words.h
common/: base64.cpp  base64.h  config.h  sse_types.h
server/: CMakeLists.txt  db_connector.cpp  db_connector.h  main.cpp  server.cpp  server.h
